css/master.css
#project-image {
  max-height: : 400px;
  display: inline-block;
}

#down-arrow {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  padding-bottom: 15px;
}

#about-section {
  background: white;
  padding-bottom: 30px;
}

#projects-section {
  background: white;
  padding-bottom: 50px;
  margin-bottom: 400px;
}

#contact-section {
  background: #222222;
  padding-bottom: 30px;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
}

#name-cont {
  background-color: #222222;
  text-align: center;
  left: 0;
  right: 0;
  padding-top: 65px;
  padding-bottom: 15px;
}

p {
  font-size: 16px;
}

h1 {
  color: #222222;
}

h2 {
  color: #222222;
  margin-bottom: 15px;
}

h3 {
  color: white;
}

body {
  font-family: 'Roboto Condensed', sans-serif;
}

hr {
  background: #222222;
  border: 0;
  height: 2px;
  width: 60%;
}

.loading {
  overflow: hidden;
}

.loaded {
  overflow: auto;
}

.name-jumbo {
  background: white;
  margin-bottom: 0;
  display: flex;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  text-align: center;
  z-index: 1;
}

.con-icon {
  height: 25px;
  width: auto;
  bottom: 0;
}

.bounce {
  -moz-animation: bounce 2s infinite;
  -webkit-animation: bounce 2s infinite;
  animation: bounce 2s infinite;
}

.glyphicon {
  font-size: 25px;
}

.centered {
  text-align: center;
}

.justified {
  text-align: justify;
}

.name {
  color: #222222;
  font-size: 70px !important;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.scroll-name {
  color: #222222;
  font-size: 40px !important;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
    color: red;
    font-size: 80px;
}

@-moz-keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -moz-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -moz-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -moz-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}
@-webkit-keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -webkit-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -webkit-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}
@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -moz-transform: translateY(-30px);
    -ms-transform: translateY(-30px);
    -webkit-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -moz-transform: translateY(-15px);
    -ms-transform: translateY(-15px);
    -webkit-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}

@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@media (min-width: 768px) {
  .navbar {
    border: 0;
  }

  .navbar-nav {
    width: 100%;
    text-align: center;
  }

  .navbar-nav > li {
    float: none;
    display: inline-block;
  }

  .align-right {
    text-align: right;
  }

  .align-left {
    text-align: left;
  }

  #mobile-contact {
    display: none;
  }

}

@media (max-width: 767px) {
  .navbar-collapse {
    text-align: center !important;
  }

  #web-contact {
    display: none;
  }
}

